fix clipping of visibility icon in rhr discussions

--- a/kifi-backend/modules/shoebox/angular/src/rightHandWidgets/keepDiscussionsWidget.styl
+++ b/kifi-backend/modules/shoebox/angular/src/rightHandWidgets/keepDiscussionsWidget.styl
@@ -50,7 +50,7 @@
 
 .kf-keep-discussions-widget-visibility
   fill: #333
-  margin-left: -3px
+  margin-left: -2px
   margin-top: -3px
   margin-right: 2px
   width: 1rem
